--- a/Tmenu/pages/index/index.wxml
+++ b/Tmenu/pages/index/index.wxml
@@ -24,7 +24,7 @@
                 <view class="menu-item-logo">
                     <image src="http://img.my-shop.cc/image/menu-icon1.png?1" class="menu-item-img"></image>
                 </view>
-                <view class="menu-item-txt b gray">点外卖</view>
+                <view class="menu-item-txt b gray">点餐</view>
             </view>
             <view class="menu-item" bindtap="call">
                 <view class="menu-item-logo">
