--- a/Tmenu/pages/menu/menu.wxss
+++ b/Tmenu/pages/menu/menu.wxss
@@ -387,28 +387,55 @@ swiper-item {
     height: 46rpx;
     border: 2rpx solid #ff4246;
     border-radius: 50%;
-    color: #ff4246;
     background-color: #fff;
-    line-height: 34rpx;
-    text-align: center;
-    font-weight: 900;
-    font-size: 48rpx;
     box-sizing: border-box;
 }
 
+.minus-img::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: "";
+    display: block;
+    width: 60%;
+    height: 4rpx;
+    background: #ff4246;
+}
+
 .plus-img {
+    position: relative;
     display: block;
     width: 46rpx;
     height: 46rpx;
     border: 2rpx solid #ff4246;
     border-radius: 50%;
-    color: #fff;
     background-color: #ff4246;
-    line-height: 34rpx;
-    text-align: center;
-    font-weight: 900;
-    font-size: 48rpx;
     box-sizing: border-box;
+}
+
+.plus-img::before {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: "";
+    display: block;
+    width: 60%;
+    height: 4rpx;
+    background: #fff;
+}
+
+.plus-img::after {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    content: "";
+    display: block;
+    width: 4rpx;
+    height: 60%;
+    background: #fff;
 }
 
 .page-foot {
@@ -655,27 +682,55 @@ swiper-item {
     border-radius: 50%;
     border: 2rpx solid #ff4246;
     background-color: #fff;
-    color: #ff4246;
-    font-weight: 900;
-    font-size: 48rpx;
-    text-align: center;
-    line-height: 46rpx;
     box-sizing: border-box;
 }
 
+.minus-num::before{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);    
+    content: "";
+    display: block;
+    width: 60%;
+    height: 4rpx;
+    background: #ff4246;
+}
+
 .plus-num {
+    position: relative;
     width: 46rpx;
     height: 46rpx;
     border-radius: 50%;
     border: 2rpx solid #ff4246;
     background-color: #ff4246;
-    color: #fff;
-    font-weight: 900;
-    font-size: 48rpx;
-    text-align: center;
-    line-height: 46rpx;
     box-sizing: border-box;
 }
+
+.plus-num::before{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);    
+    content: "";
+    display: block;
+    width: 60%;
+    height: 4rpx;
+    background: #fff;
+}
+
+.plus-num::after{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);    
+    content: "";
+    display: block;
+    width: 4rpx;
+    height: 60%;
+    background: #fff;
+}
+
 
 .x-y-center-minus {
     position: relative;
@@ -691,7 +746,8 @@ swiper-item {
     display: block;
     z-index: 10001;
 }
-.foot-blank{
+
+.foot-blank {
     display: block;
     height: 178rpx;
 }
