--- a/Tmenu/pages/hbRecord/hbRecord.wxml
+++ b/Tmenu/pages/hbRecord/hbRecord.wxml
@@ -1,4 +1,85 @@
-
 <view class="page-container">
-    这是红包记录
+    <view class="page-head">
+        <view class="bc-box">
+            <view class="bc-top"></view>
+            <view class="bc-bottom"></view>
+        </view>
+        <image src="http://img.my-shop.cc/image/hb_record_left.png" class="img-left"></image>
+        <image src="http://img.my-shop.cc/image/hb_record_right.png" class="img-right"></image>
+    </view>
+    <view class="page-section">
+        <view class="tab-box">
+            <view class="tab-in tab {{hb_click_type===0?'txt-red':''}}" data-tab_index="{{0}}" bindtap="chooseTab">
+                收入的红包
+                <view class="{{hb_click_type===0?'line':''}}"></view>
+            </view>
+            <view class="tab-out tab {{hb_click_type===1?'txt-red':''}}" data-tab_index="{{1}}" bindtap="chooseTab">
+                支出的红包
+                <view class="{{hb_click_type===1?'line':''}}"></view>
+            </view>
+        </view>
+
+
+        <view class="in-list-box" wx:if="{{hb_click_type===0}}">
+            <view class="in-item">
+                <view class="in-title-box">
+                    <view class="in-title">
+                        <image src="http://img.my-shop.cc/image/logo_hb.png" class="logo-img"></image>
+                        <view class="title-txt">店的名称</view>
+                    </view>
+                    <view class="in-time">2017-08-09 12:00</view>
+                </view>
+                <view class="in-content-box">
+                    <view class="content-des">
+                        <image src="http://img.my-shop.cc/image/vic_icon.png" class="vic-img"></image>
+                        <view class="content-txt">你是猴子派来的救兵么</view>
+                    </view>
+                    <view class="content-price">￥22</view>
+                </view>
+            </view>
+            <view class="in-item">
+                <view class="in-title-box">
+                    <view class="in-title">
+                        <image src="http://img.my-shop.cc/image/logo_hb.png" class="logo-img"></image>
+                        <view class="title-txt">店的名称</view>
+                    </view>
+                    <view class="in-time">2017-08-09 12:00</view>
+                </view>
+                <view class="in-content-box">
+                    <view class="content-des">
+                        <image src="http://img.my-shop.cc/image/vic_icon.png" class="vic-img"></image>
+                        <view class="content-txt">你是猴子派来的救兵么</view>
+                    </view>
+                    <view class="content-price">￥22</view>
+                </view>
+            </view>
+            <view class="show-more">查看更多</view>
+        </view>
+
+
+        <view class="out-list-box" wx:if="{{hb_click_type===1}}">
+            <view class="out-item">
+                <view class="out-title-des">
+                    <image src="http://img.my-shop.cc/image/logo_hb.png" class="logo-img out-logo"></image>
+                    <view class="out-txt">
+                        <view class="shop-name">店的名字</view>
+                        <view class="out-detail">2017-08-08 订单号：2134812316546</view>
+                    </view>
+                </view>
+                <view class="out-price">-22</view>
+            </view>
+            <view class="out-item">
+                <view class="out-title-des">
+                    <image src="http://img.my-shop.cc/image/logo_hb.png" class="logo-img out-logo"></image>
+                    <view class="out-txt">
+                        <view class="shop-name">店的名字</view>
+                        <view class="out-detail">2017-08-08 订单号：2134812316546</view>
+                    </view>
+                </view>
+                <view class="out-price">-22</view>
+            </view>
+            <view class="show-more">查看更多</view>
+        </view>
+    </view>
+    <view class="page-foot">©伯格网络提供支持</view>
 </view>
