--- a/Tmenu/pages/index/index.wxml
+++ b/Tmenu/pages/index/index.wxml
@@ -72,7 +72,7 @@
                     <swiper class="mid-slide" indicator-dots="{{true}}" indicator-active-color="#ff4246" autoplay="{{true}}" interval="{{5000}}" duration="{{600}}">
                         <block wx:for="{{ev_slide_urls}}">
                             <swiper-item>
-                                <image src="{{item}}" class="slide-image" />
+                                <image src="{{item.image}}" class="slide-image" />
                             </swiper-item>
                         </block>
                     </swiper>
@@ -81,14 +81,14 @@
             </view>
             <view class="slide-box">
                 <view class="slide-title-box">
-                    <view class="slide-title-ch txt-title-ch">营销活动</view>
+                    <view class="slide-title-ch txt-title-ch">优惠活动</view>
                     <view class="slide-title-en txt-title-en">ACTIVITY</view>
                 </view>
                 <view class="slide-content">
                     <swiper class="mid-slide" indicator-dots="{{true}}" indicator-active-color="#ff4246" autoplay="{{true}}" interval="{{5000}}" duration="{{600}}">
                         <block wx:for="{{ac_slide_urls}}">
                             <swiper-item>
-                                <image src="{{item}}" class="slide-image" />
+                                <image src="{{item.image}}" class="slide-image" />
                             </swiper-item>
                         </block>
                     </swiper>
@@ -101,27 +101,27 @@
                     <view class="slide-title-en txt-title-en">RECOMMEND</view>
                 </view>
                 <view class="slide-content recommend">
-                    <swiper class="big-slide" indicator-dots="{{false}}" autoplay="{{true}}" indicator-active-color="#ff4246" interval="{{5000}}" duration="{{600}}">
+                    <swiper class="big-slide" indicator-dots="{{false}}" autoplay="{{true}}" indicator-active-color="#ff4246" interval="{{5000}}" duration="{{600}}" current="{{curr_index}}" bindchange="change">
                         <block wx:for="{{re_slide_urls}}">
                             <swiper-item>
-                                <image src="{{item}}" class="slide-image-big" />
+                                <image src="{{item.image}}" class="slide-image-big" />
                                 <view class="recommend-box">
                                     <view class="recommend-title">
                                         <view class="recommend-title-box">
                                             <image src="http://img.my-shop.cc/image/rec_icon.png" class="rec-img"></image>
                                             <view class="title-txt">虾仁蛋羮</view>
                                         </view>
-                                        <view class="recommend-price">￥12</view>
+                                        <view class="recommend-price">￥{{item.price}}</view>
                                     </view>
                                     <view class="recommend-detail">
-                                        蛋香醇厚，入伙慢炖，脂肪充分分解晶莹剔透的肉皮，入口即化香而胶原蛋白丰富的美容佳品
+                                        {{item.intro}}
                                     </view>
                                 </view>
                             </swiper-item>
                         </block>
+                        <view class="pre-btn {{curr_index===0?'hide':''}}" bindtap="preRecm"></view>
+                        <view class="next-btn {{curr_index===(re_slide_urls.length - 1)?'hide':''}}" bindtap="nextRecm"></view>
                     </swiper>
-                    <!-- <view class="pre-btn" bindtap="preRecm"></view>
-                    <view class="next-btn" bindtap="nextRecm"></view> -->
                 </view>
 
             </view>
