--- a/Tmenu/pages/menu/menu.wxss
+++ b/Tmenu/pages/menu/menu.wxss
@@ -479,8 +479,13 @@ swiper-item {
     position: relative;
     display: flex;
     align-items: center;
-    margin-left: 24rpx;
+    padding-left: 24rpx;
     width: 70%;
+}
+
+.shop-cart:active{
+    background: rgba(0, 0, 0, .2);
+    border-color: rgba(0, 0, 0, .2);
 }
 
 .cart-text {
