--- a/Tmenu/pages/voiceExample/voiceExample.wxml
+++ b/Tmenu/pages/voiceExample/voiceExample.wxml
@@ -12,10 +12,10 @@
       <view class="speak-content">
         <view class="speak-txt-box">
             <image src="http://img.my-shop.cc/image/voice-icon.png" class="voice-img"></image>
-            <view class="speak-txt">谢谢老板</view>
+            <view class="speak-txt">这家店的菜真好吃</view>
         </view>
         <view clas="speak-btn-box">
-            <button type="default" class="record-btn">赏金都被领取完了</button>
+            <button type="primary" class="record-btn" bindlongpress="recordVoice" bindtouchend="stopRecord">长按说出以上口令领取赏金</button>
         </view>
         <view class="entry-box">
             <view class="to-menu" bindtap="toMenu">
@@ -31,21 +31,25 @@
     </view>
     <view class="page-foot">
         <view class="hb-info-box">
-            <view class="hb-info">共10.00元,领取0/3个</view>
-            <view class="hb-right-txt">举报</view>
+            <view class="hb-info">共{{mode_data.mode_money}}元,领取0/{{mode_data.count}}个</view>
+            <view class="hb-right-txt" bindtap="goaaa">举报</view>
         </view>
-        <view class="hb-list-box" wx:for="[3]">
+        <view class="check-record" wx:if="{{!isSpeak}}">
+            <view class="check-record-txt" bindtap="toHbRecord">查看我的记录</view>
+        </view>
+        <view class="hb-notice" wx:if="{{!isSpeak}}">未领取的金额,将于24小时后退至余额</view>
+        <view class="hb-list-box" wx:for="{{voices}}">
             <view class="hb-list-item">
                 <view class="hb-item-left">
-                    <image src="http://img.my-shop.cc/image/voice-user-icon.jpg" class="voice-user-icon"></image>
+                    <image src="{{item.avatarUrl}}" class="voice-user-icon"></image>
                     <view class="voice-box">
-                        <view class="user-name">gosling</view>
-                        <button class="voice-btn">4"</button>
+                        <view class="user-name">{{item.nickName}}</view>
+                        <button class="voice-btn" data-i="{{index}}" data-obj="{{item}}" bindtap="playVoice">{{item.isPlaying?"播放中":item.time+'"'}}</button>
                     </view>
                 </view>
                 <view class="hb-item-right">
                     <view class="hb-count">25.16元</view>
-                    <view class="hb-time">7月16日 20：55</view>
+                    <view class="hb-time">{{item.fomatCreateTime}}</view>
                 </view>
             </view>
         </view>
